<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">I\'m Live</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_id">User id</string>
    <string name="password">Password</string>
    <string name="test">Test String</string>
    <string name="number">10</string>
    <string name="cd">Content Description</string>
    <string name="audio_call">Audio call</string>
    <string name="video_call">Video call</string>
    <string name="chat">Chat</string>
    <string name="delete_contact">Delete</string>

</resources>